Add suggestions link

--- a/src/ui.html
+++ b/src/ui.html
@@ -1,1 +1,4 @@
-<span>Drag a component to the canvas to sketchify it!</span>
+<div>
+    <span>✨ Drag an asset to the canvas to sketchify it ✨</span>
+    <span id="issues">Suggestions for improvement? Submit them <a href="https://github.com/gsysko/Zketch/issues/new"  target='_blank'>here.</a></span>
+</div>
