--- a/src/ui.html
+++ b/src/ui.html
@@ -1,4 +1,4 @@
 <div>
     <span>✨ Drag an asset to the canvas to sketchify it ✨</span>
-    <span id="issues">Suggestions for improvement? Submit them <a href="https://github.com/gsysko/Zketch/issues/new"  target='_blank'>here.</a></span>
+    <span id="issues">Suggestion for improvement? Submit <a href="https://github.com/gsysko/Zketch/issues/new"  target='_blank'>here.</a></span>
 </div>
